Add Eigen library

--- a/Linux Application/.vscode/settings.json
+++ b/Linux Application/.vscode/settings.json
@@ -63,6 +63,8 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "bit": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "dense": "cpp",
+        "eigenvalues": "cpp"
     }
 }
