Cancel timeout function of the linux service

--- a/Linux Application/system service configuration/exoskeleton_agent.service
+++ b/Linux Application/system service configuration/exoskeleton_agent.service
@@ -5,8 +5,10 @@ Type=forking
 Restart=always
 ExecStart=/home/jy/git/exoskeleton.sh
 ExitType=cgroup
-timeoutSec=900
+timeoutSec=infinity
 TimeoutAbortSec=infinity
+TimeoutStartSec=infinity
+TimeoutStopSec=infinity
 RemainAfterExit=1
 
 [Install]
